Addressed issues with layers title showing up in layer switcher when no layers are present. Also fixed the min size of the layer switcher so the titles will not wrap.

--- a/js/components/LayerList.css
+++ b/js/components/LayerList.css
@@ -4,6 +4,7 @@
   right: 0.5em;
   text-align: left;
   max-width: 350px;
+  min-width: 250px;
 }
 .layer-switcher .layer-tree-panel {
   display: none;
